k8s/frontend-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-app
  template:
    metadata:
      labels:
        app: banking-app
    spec:
      containers:
        # Backend container
        - name: backend
          image: kouserdev/banking-backend:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
        # Frontend container (Nginx serving production build)
        - name: frontend
          image: kouserdev/banking-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: banking-backend
spec:
  type: LoadBalancer
  selector:
    app: banking-app
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30001

---
apiVersion: v1
kind: Service
metadata:
  name: banking-frontend
spec:
  type: LoadBalancer
  selector:
    app: banking-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
